# jidoka

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  compose.yaml
.github/workflows/: backend-tests.yml  frontend-tests.yml
backend/: .dockerignore  Dockerfile  db.py  main.py  models.py  pyproject.toml
backend/tests/: conftest.py  test_archive.py  test_daily_stats.py  test_health.py  test_projects.py  test_task_project_linking.py  test_tasks.py  test_work_blocks.py
frontend/: package.json  pnpm-lock.yaml  vitest.config.ts
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx
frontend/src/app/board/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/board/: add-task-dialog.test.tsx  add-task-dialog.tsx  add-task.tsx  archive-task.tsx  board.tsx  column.tsx  delete-task.test.ts  delete-task.tsx  task-card.tsx  task-dialog.tsx
frontend/src/components/pomodoro/: pomodoro-menu.tsx  pomodoro-settings.tsx  tomato-icon.tsx
frontend/src/components/projects/: chart-legend.tsx  create-project-dialog.tsx  day-bar.tsx  delete-project-dialog.test.tsx  delete-project-dialog.tsx  project-description.tsx  project-dialog.test.tsx  project-dialog.tsx  project-list.tsx  weekly-bar-chart.tsx
frontend/src/components/ui/: button.tsx  checkbox.tsx  markdown-text.tsx  native-select.tsx  popover.tsx  slider.tsx  textarea.tsx  (+1 more)
frontend/src/lib/: alarm.ts  api.ts  project-palette.ts  project-task-counts.ts  types.ts  weekly-chart.ts
frontend/src/stores/: board-store.test.ts  board-store.ts  pomodoro-store.test.ts  pomodoro-store.ts
